--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "prettier": "^3.2.5"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
