--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,9 @@
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
+    "puppeteer": "^23.11.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "sequelize": "^6.37.1",
     "sha256": "^0.2.0"
   }
